--- a/DanielAguila-JuanLeon.Rmd
+++ b/DanielAguila-JuanLeon.Rmd
@@ -267,7 +267,7 @@ probabilidadCondicionada
 
 
 ###1.4 Simulacion y Analisis
-**Enunciado:** En el juego DOTA 2 existe un personaje particular llamado Phantom Assassin, el cual es el terror de los enemigos dado que este heroe y las probabilidades parecen llevarse muy bien.
+**Enunciado:** En el juego DOTA 2 existe un personaje particular llamado Phantom Assassin, el cual es el terror de los enemigos dado que este heroe y las probabilidades parecen llevarse muy bien...
 
   En cada uno de los siguientes tres casos se simularon 1000 batallas entre Phantom Assassins (vida: 1500, ataque: 122) y un oponente con el triple de atributos (vida: 4500, ataque: 366), con la diferecia que en cada caso Phantom tendra ambas habilidades disponibles o alguna de estas dehabilitada.
 ```{r}
@@ -416,7 +416,7 @@ rownames(m2) <- c("Blur + Coup Grace","Coup Grace","Blur")
 kable(m2,caption="Resultados")
 ```
 
-Si consideramos la clara desventaja en ataque y vida del contrincante es resaltable que:
+Si consideramos la clara desventaja en atributos con el contrincante es resaltable que:
 
 1.  Con ambas habilidades Phantom pueda llegar a ganar prácticamente 30% de las batallas.
   
@@ -429,5 +429,9 @@ Finalmente se puede concluir que Blur es la habilidad más efectiva para evitar s
   
 ##III. Conclusiones
 
+Simulación y Analisis:
+  R es muy util a la hora de realizar simulaciones y para recolectar datos, es posible ejecutar el mismo experimento muchas veces y obtener datos estadisticos de los casos resultantes.
+  
+  
 
 
